--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 <!-- Banner -->
 	<section id="banner">
 		<header>
-			<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-			<a href="#" class="button">Learn More</a>
+			<h2>Tracking:<em> Check the status of your packages</em></h2>
+			<a href="#" class="button">Check Now</a>
 		</header>
 	</section>
 
