--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <!-- Banner -->
 	<section id="banner">
 		<header>
-			<h2>Tracking:<em> Check the status of your packages</em></h2>
+			<h2>Tracking: <em> Check the status of your package</em></h2>
 			<a href="#" class="button">Check Now</a>
 		</header>
 	</section>
